Adiciona o capítulo de Funções Trigonométricas
Aluno e professor. Alterações também nos capítulos de Taxa de Variação, Introdução às Funções, Logaritmos, Função Exponencial e Função Afim. Há também pequenas correções no capítulo de Educação financeira.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ aluno.aux
 controle.txt
 professor.pdf
 source.tex
+Capítulos para diagramação
+*.aux
+*.log
+*.aux
+*.log
+*.blg
+*.aux
+*.bbl
+*.aux
+*.aux
