Capítulo de Vetores no Plano
Adição do capítulo de vetores e atualizações no capítulo de Pensamento Computacional

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ Capítulos para diagramação
 *.bbl
 *.aux
 *.aux
+professor.atfi
+professor.pgf-plot.gnuplot
+x.log
+aluno.pgf-plot.gnuplot
+professor.pre
+professor.ent
+professor.idx
