--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,51 @@ aluno.pgf-plot.gnuplot
 professor.pre
 professor.ent
 professor.idx
+Figuras/grafico-final (Small).png
+Figuras/maquinas (Small).jpg
+Figuras/registro de figuras/funcoes1.png
+Figuras/registro de figuras/funcoes10.png
+Figuras/registro de figuras/funcoes11.png
+Figuras/registro de figuras/funcoes12.png
+Figuras/registro de figuras/funcoes13.png
+Figuras/registro de figuras/funcoes14.png
+Figuras/registro de figuras/funcoes15.png
+Figuras/registro de figuras/funcoes16.png
+Figuras/registro de figuras/funcoes17.png
+Figuras/registro de figuras/funcoes18.png
+Figuras/registro de figuras/funcoes19.png
+Figuras/registro de figuras/funcoes2.png
+Figuras/registro de figuras/funcoes20.png
+Figuras/registro de figuras/funcoes21.png
+Figuras/registro de figuras/funcoes22.png
+Figuras/registro de figuras/funcoes23.png
+Figuras/registro de figuras/funcoes24.png
+Figuras/registro de figuras/funcoes25.png
+Figuras/registro de figuras/funcoes26.png
+Figuras/registro de figuras/funcoes27.png
+Figuras/registro de figuras/funcoes28.png
+Figuras/registro de figuras/funcoes29.png
+Figuras/registro de figuras/funcoes3.png
+Figuras/registro de figuras/funcoes30.png
+Figuras/registro de figuras/funcoes31.png
+Figuras/registro de figuras/funcoes32.png
+Figuras/registro de figuras/funcoes33.png
+Figuras/registro de figuras/funcoes34.png
+Figuras/registro de figuras/funcoes35.png
+Figuras/registro de figuras/funcoes36.png
+Figuras/registro de figuras/funcoes37.png
+Figuras/registro de figuras/funcoes38.png
+Figuras/registro de figuras/funcoes4.png
+Figuras/registro de figuras/funcoes40.png
+Figuras/registro de figuras/funcoes41.png
+Figuras/registro de figuras/funcoes5.png
+Figuras/registro de figuras/funcoes6.png
+Figuras/registro de figuras/funcoes7.png
+Figuras/registro de figuras/funcoes8.png
+Figuras/registro de figuras/funcoes9.png
+*.fdb_latexmk
+*.fls
+*.ind
+*.ilg
+*.gz
+*.xdv
