Correção no capítulo de Função Quadrática

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ Figuras/registro de figuras/funcoes9.png
 *.ilg
 *.gz
 *.xdv
+Figuras/registro de figuras/quadratica2.png
+Figuras/registro de figuras/quadratica3.png
+Figuras/registro de figuras/quadratica4.png
